Остановился на футере

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles_copy.css" />
   </head>
   <body>
     <!-- Шапка сайту -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-container container">
         <nav class="nav">
           <a class="nav-logo link" href="./index.html"
@@ -55,7 +55,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <!-- Основний контент сайту -->
     <main>
       <!-- Hero section -->
@@ -158,7 +158,7 @@
       </section>
       <!-- Our Team section -->
       <section class="team">
-        <div class="container">
+        <div class="team-container container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-item">
@@ -434,7 +434,7 @@
       </section>
       <!-- Customer section -->
       <section class="customers">
-        <div class="container">
+        <div class="customers-container container">
           <h2 class="customer-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-list-item">
@@ -611,7 +611,7 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -701,12 +701,12 @@
           <button class="modal-form-btn hero-section-btn" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
-    <!--  Mask from modal -->
-    <script src="./js/inputmask.min.js"></script>
-    <script src="./js/form.js"></script>
+    <!-- Mask from modal -->
+    <!-- <script src="./js/inputmask.min.js"></script>
+    <script src="./js/form.js"></script> -->
     <!-- Script -->
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
