finish home-work07

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles_copy.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайту -->
@@ -662,7 +662,7 @@
               required
               pattern="[\+]\d{2}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
               title="Формат має бути +38 0** *** ** **"
-              placeholder="&nbsp;"
+              placeholder="+38 (050) 123-45-67"
             />
 
             <svg class="modal-form-icon valid-phone" width="18" height="24" data-form-icon>
@@ -736,12 +736,12 @@
       </ul>
       <ul class="mobile-contacts list">
         <li class="mobile-contacts-items">
-          <a href="tel:+110001111111" class="mobile-contacts-link link email">
+          <a href="tel:+110001111111" class="mobile-contacts-link link tel">
             +11 (000) 111-11-11
           </a>
         </li>
         <li class="mobile-contacts-items">
-          <a href="mailto:info@devstudio.com" class="mobile-contacts-link link tel">
+          <a href="mailto:info@devstudio.com" class="mobile-contacts-link link email">
             info@devstudio.com
           </a>
         </li>
